--- a/index.html
+++ b/index.html
@@ -23,41 +23,81 @@
 </head>
 
 <body>
-    <header class="header">
-        <!--Logo-->
-        <a href="index.html" target="_self">
-            <img src="./assets/so_white.svg" width="250px" alt="Logo Serviobras">
-        </a>
-        <!--Menu-->
-        <ul>
-            <li><a href="index.html" target="_self">Inicio</a></li>
-            <li><a href="./pages/nosotros.html" target="_self">Nosotros</a></li>
-            <li><a href="./pages/novedades.html" target="_self">Novedades</a></li>
-            <li><a href="./pages/tienda.html" target="_self">Tienda</a></li>
-            <li><a href="./pages/contacto.html" target="_self">Contacto</a></li>
-        </ul>
-    </header>
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <a href="./pages/tienda.html" target="_self"><img src="./assets/header1.jpg" class="d-block w-100" alt="Foto slider uno"></a>
-            </div>
-            <div class="carousel-item">
-                <a href="./pages/tienda.html" target="_self"><img src="./assets/header2.jpg" class="d-block w-100" alt="Foto slider dos"></a>
-            </div>
-            <div class="carousel-item">
-                <a href="./pages/tienda.html" target="_self"><img src="./assets/header3.jpg" class="d-block w-100" alt="Foto slider tres"></a>
+    <nav class="navbar navbar-dark fixed-top navbar-customize">
+        <div class="container-fluid navbar-customize">
+            <a class="navbar-brand" href="index.html" target="_self">
+                <img class="logo" src="./assets/so_white.svg" alt="Logo Serviobras">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">¿Qué estás buscando?</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body navbar-customize">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a href="index.html" aria-current="page" target="_self">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./pages/nosotros.html" target="_self">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./pages/novedades.html" target="_self">Novedades</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./pages/tienda.html" target="_self">Tienda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./pages/contacto.html" target="_self">Contacto</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex mt-3" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                        <button type="submit" class="boton--secundario">Buscar</button>
+                    </form>
+                </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    </nav>
+    <div id="carouselExampleInterval" class="carousel slide slider-customize" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="5000">
+                <a href="./pages/tienda.html" target="_self"><img src="./assets/header1.jpg" class="d-block w-100"
+                        alt="Foto slider uno"></a>
+            </div>
+            <div class="carousel-item" data-bs-interval="5000">
+                <a href="./pages/tienda.html" target="_self"><img src="./assets/header2.jpg" class="d-block w-100"
+                        alt="Foto slider dos"></a>
+            </div>
+            <div class="carousel-item" data-bs-interval="5000">
+                <a href="./pages/tienda.html" target="_self"><img src="./assets/header3.jpg" class="d-block w-100"
+                        alt="Foto slider tres"></a>
+            </div>
+            <div class="carousel-item" data-bs-interval="5000">
+                <a href="./pages/tienda.html" target="_self"><img src="./assets/header4.jpg" class="d-block w-100"
+                        alt="Foto slider tres"></a>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+
+
     <main class="home__secciones">
         <!--Titulo principal-->
         <article>
@@ -113,7 +153,7 @@
         </section>
         <section class="home__secciones">
             <article class="home__novedades--cards">
-                <img src="./assets/news1.jpg" alt="Foto baldosas decorativas">
+                <img src="./assets/news1-360.jpg" alt="Foto baldosas decorativas">
                 <h2>BALDOSAS ACRÍLICAS DECORATIVAS PARA TU OBRA</h2>
                 <p>Un nuevo tipo de material de construcción de acabado es una baldosa sensible con fibra acrílica
                     que reacciona a tus movimientos, al tacto o a las fuentes de luz. La fibra óptica transmite luz
@@ -123,7 +163,7 @@
                 <a href="./pages/novedades.html" target="_self"><button class="boton--ver-mas">VER MÁS</button></a>
             </article>
             <article class="home__novedades--cards">
-                <img src="./assets/news2.jpg" alt="Foto IA Asi ha cambiado la arquitectura">
+                <img src="./assets/news2-360.jpg" alt="Foto IA Asi ha cambiado la arquitectura">
                 <h2>IA: ASÍ HA CAMBIADO A LA ARQUITECTURA Y EL DISEÑO</h2>
                 <p>Poco después de la pandemia, SPACE10, un laboratorio de investigación y diseño que se unió con
                     IKEA para escapar y resolver problemas del hogar durante la época de confinamiento. Fue así que
@@ -134,14 +174,14 @@
                 <a href="./pages/novedades.html" target="_self"><button class="boton--ver-mas">VER MÁS</button></a>
             </article>
             <article class="home__novedades--cards">
-                <img src="./assets/news3.jpg" alt="Foto tendencias de color 2023">
+                <img src="./assets/news3-360.jpg" alt="Foto tendencias de color 2023">
                 <h2>ESTAS SON LAS TENDECIAS DE COLOR PARA 2023 EN DISEÑO</h2>
                 <p>Colores que atraen la calma, la naturaleza y la vivacidad, son algunas de las tendencias de color
                     que veremos en 2023, después de un largo periodo de pandemia alrededor del mundo. Ya sea en
                     diseño, interiorismo, arquitectura o moda, estos colores se relacionan con la renovación, como
                     los tonos neutrales como el crema o beige, los pasteles y la gama de azules y verdes claros.
                     Conocelos todos en este informe.</p>
-                    <a href="./pages/novedades.html" target="_self"><button class="boton--ver-mas">VER MÁS</button></a>
+                <a href="./pages/novedades.html" target="_self"><button class="boton--ver-mas">VER MÁS</button></a>
             </article>
         </section>
     </main>
@@ -172,29 +212,24 @@
             </article>
         </section>
     </main>
-    <footer>
-        <div class="footer__0">
-            <div class="footer__1">
-                <div>
-                    <div class="footer__logo">
-                        <img src="./assets/so_white.svg" width="200px">
-                    </div>
-                </div>
-            </div>
-            <div class="footer__2">
-                <div class="footer__box">
-                    <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="./assets/rrss_ig.png" alt="Instagram"></a>
-                </div>
-                <div class="footer__box">
-                    <a href="https://www.linkedin.com/feed/" target="_blank"><img src="./assets/rrss_ln.png" alt="Linkedin"></a>
-                </div>
-                <div class="footer__box">
-                    <a href="https://www.youtube.com/" target="_blank"><img src="./assets/rrss_yt.png" alt="YouTube"></a>
+    <footer class="footer__tienda">
+        <div class="footer__1">
+            <div>
+                <div class="footer__logo">
+                    <img src="./assets/so_white.svg" width="200px">
                 </div>
             </div>
         </div>
-        <div class="footer__caja2">
-            <p>Derechos reservados 2023</p>
+        <div class="footer__2">
+            <div class="footer__box">
+                <a href="https://www.instagram.com/?hl=es" target="_blank"><img src="./assets/rrss_ig.png" alt="Instagram"></a>
+            </div>
+            <div class="footer__box">
+                <a href="https://www.linkedin.com/feed/" target="_blank"><img src="./assets/rrss_ln.png" alt="Linkedin"></a>
+            </div>
+            <div class="footer__box">
+                <a href="https://www.youtube.com/" target="_blank"><img src="./assets/rrss_yt.png" alt="YouTube"></a>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
