--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -101,7 +101,7 @@
     </div>
     <main class="nosotros__secciones">
         <article class="nosotros__secciones--titulo">
-            <h1 class="nosotros_secciones--titulo">SOMOS LA GUÍA DE CONSULTA DE LA CONSTRUCCIÓN, PARA QUE TODOS PUEDAN ENCONTRAR LOS PROVEEDORES PARA
+            <h1>SOMOS LA GUÍA DE CONSULTA DE LA CONSTRUCCIÓN, PARA QUE TODOS PUEDAN ENCONTRAR LOS PROVEEDORES PARA
                 CONSTRUIR, REMODELAR, DECORAR O EQUIPAR SU CASA</h1>
             <p>Revista Serviobras nación en 2001 como una revista en papel que llevara
                 información útil sobre
