--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -143,8 +143,8 @@
                 <option value="2">Two</option>
                 <option value="3">Three</option>
             </select>-->
-            <button type="submit" class="boton  form__botones">Enviar</button>
-            <button type="reset" class="boton--reset  form__botones">Limpiar</button>
+            <button type="submit" class="boton">Enviar</button>
+            <button type="reset" class="boton--reset">Limpiar</button>
         </form>
 
         <iframe class="form__map--iframe"
